feat(app,front,schema): add `/roles` API
