# front/src/api/model/index.ts
@@ -7,12 +7,14 @@
 
 export * from "./accessTokenWithMeAndPagePermissions";
 export * from "./currentPage";
+export * from "./getRolesParams";
 export * from "./googleLoginURL";
 export * from "./me";
 export * from "./pagePermissions";
 export * from "./role";
 export * from "./searchUsersParams";
 export * from "./sortType";
+export * from "./sortableRoleDataType";
 export * from "./sortableUserDataType";
 export * from "./user";
 export * from "./uuid";
